--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ button {
   gap: 30px;
   justify-content: center;
   padding: 30px;
+  flex-wrap: wrap;
 }
 
 .portfolio-cards-section img {
@@ -207,7 +208,7 @@ button {
   border-radius: 10px;
   padding: 20px;
   padding: 24px 24px 0px;
-  width: 100%;
+  width: 30%;
   min-width: 0%;
 }
 
@@ -250,6 +251,10 @@ button {
   .navbar-container {
     flex-direction: column;
     gap: 20px;
+  }
+
+  .portfolio-card {
+    width: 100%;
   }
 
   .portfolio-cards-section-container {
